# Robotics

./: README.md
src/: pref.py
src/custom_message/: CMakeLists.txt  package.xml
src/custom_message/msg/: DetectedObjectsStamped.msg
src/robotic_arm/: CMakeLists.txt  package.xml  requirements.txt  setup.py
src/robotic_arm/config/: jtc.yaml
src/robotic_arm/launch/: gazebo.launch.py
src/robotic_arm/models/bin_blue/: model.sdf
src/robotic_arm/models/bin_green/: model.sdf
src/robotic_arm/models/bin_red/: model.sdf
src/robotic_arm/models/block_blue/: model.sdf
src/robotic_arm/models/block_green/: model.sdf
src/robotic_arm/models/block_red/: model.sdf
src/robotic_arm/models/kinect/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
src/robotic_arm/models/underbin_bench/: model.sdf
src/robotic_arm/models/workbench/: model.sdf
src/robotic_arm/msg/: DetectedObjectsStamped.msg
src/robotic_arm/robotic_arm/: 2_inverse_kinematics_solution.py  controller_test.py  object_detector.py
src/robotic_arm/urdf/: robotic_arm.urdf
src/robotic_arm/world/: my_world.sdf
